--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<header>
 			<div class="container">
 				<div class="logo">
-					<h2>Web<span></span></h2>
+					<h2>Vicky<span></span></h2>
 				</div>
 
 				<nav class="menu-overlay">
